@@ -25,8 +25,8 @@ minute are never caught by \fBmirror.sh\fR.
 .TP
 .B \-a
 Write the uid and gid information to the file's extended user attributes:
-\'r_uid' and 'r_gid'. This option only works if \fBrattr\fR is available
-on the system.
+\'r_uid' and 'r_gid'. This option only works if \fBattr\fR is available
+on the system. And currently only for Linux.
 
 This option is usefull when storing a remote backup. Normally these
 backups are transferred by a non-root user. This user will not be able
