@@ -8,11 +8,10 @@ exec_prefix=@exec_prefix@
 cstream=@cstream@
 
 usage() {
-        echo "$PROGNAME [OPTIONS] NAME DIR [DIR ...]"
+        echo "$PROGNAME [OPTIONS] DIR [DIR ...]"
         echo 
         echo "This is a wrapper around rdup and mirror.sh"
         echo
-        echo NAME - prefix for filelist and timestamp files
         echo DIR \ - directories to back up
         echo
         echo OPTIONS:
@@ -20,6 +19,7 @@ usage() {
         echo " -c REMOTE  dump the backup on a remote machine with ssh"
         echo " -l NUM     limit transfer to NUM bytes/second, see cstream(1)'s -t"
         echo " -k KEYFILE encrypt all files"
+        echo " -N PREFIX  optional prefix for the timestmp and filelist"
         echo " -a         write extended attributes with uid/gid"
         echo " -e         filelist and timestamp are put in backup directory"
         echo " -z         compress all files"
@@ -38,6 +38,7 @@ PROGNAME=$0
 BACKUPDIR=""
 gzip=0
 KEYFILE=""
+PREFIX=""
 remote=""
 bwidth=""
 a=""
@@ -68,6 +69,10 @@ while getopts ":ab:k:l:c:s:vzehV" o; do
                         _echo2 "-c needs an argument"
                         exit 1
                 fi;;
+                N) PREFIX=$OPTARG
+                if [[ -z $PREFIX ]]; then
+                        _echo2 "-N needs an argument"
+                fi;;
                 l) bwidth=$OPTARG;;
                 e) etc=1;;
                 z) gzip=1;;
@@ -81,7 +86,7 @@ while getopts ":ab:k:l:c:s:vzehV" o; do
 done
 shift $((OPTIND - 1))
 if [[ $# -eq 0 ]]; then
-        _echo2 "NAME is mandatory"
+        _echo2 "No directories to backup" 
         exit 1
 fi
 if [[ -z $BACKUPDIR ]]; then
@@ -103,18 +108,12 @@ else
         ETC="$BACKUPDIR"
 fi
 
-NAME=$1  
 BACKUPDIR_DATE="$BACKUPDIR/$d"
-STAMP="$ETC/$HOSTNAME.$NAME.timestamp"
-LIST="$ETC/$HOSTNAME.$NAME.list"
+STAMP="$ETC/$HOSTNAME.$(basename $1).timestamp"
+LIST="$ETC/$HOSTNAME.$(basename $1).list"
 # DIRS in $@
-shift
-if [[ -z $@ ]]; then
-        _echo2 "No directories to backup" 
-        exit 1
-fi
 
-# this needs to be done differently
+# this needs to be done differently, why? MG 11 May
 mkdir -m 755 -p "$BACKUPDIR"           
 mkdir -m 755 -p "$BACKUPDIR_DATE"
 # add pwd if the path was relative
